<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="left"
    android:orientation="vertical"
    tools:context=".PresentationActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/previous_button"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:onClick="previousSlide"
            android:text="@string/previous_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/START_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startPresentation"
            android:text="@string/START_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/END_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="exitPresentation"
            android:text="@string/END_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:onClick="nextSlide"
            android:text="@string/next_button"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/notes_text"
        android:textColor="@color/white" />

    <android.gesture.GestureOverlayView
        android:id="@+id/gestureOverlayView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.91" 
        android:onClick="swipe" >
        
    </android.gesture.GestureOverlayView>

</LinearLayout>