<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayMousePad" >

    <Button
        android:id="@+id/button1"
        android:background="#DED8DE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="58dp"
        android:text="@string/left_click"
        android:onClick="leftClick" />

    <Button
        android:id="@+id/button2"
        android:background="#DED8DE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:text="@string/right_click"
        android:onClick="rightClick" />

    <Button
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_toRightOf="@+id/button3"
        android:background="@drawable/right"
        android:onClick="moveRight" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button5"
        android:layout_marginTop="15dp"
        android:background="@drawable/down"
        android:onClick="moveDown" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="@drawable/up"
        android:onClick="moveUp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/button6"
        android:background="@drawable/left"
        android:onClick="moveLeft" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:entries="@array/tasks"
        android:background="@color/spin"
        android:textColor="#FFFFFF"
        android:prompt="@string/task_prompt" />

</RelativeLayout>